updated coupon impl
