# src/controllers/cart.controller.ts
@@ -1,9 +1,11 @@
 import { Body, Controller, Delete, Get, Post, Put, Request, Route, Security, Tags, Path } from "tsoa";
 import createCart, { createCartItems, deleteCartbyId, fetchAllCart, fetchCartbyId, updatedCart } from "../services/cart";
-import { CartItemsModelType, CartModelType } from "../types/database.types";
+import { CartItemsModelType, CartModelType, CouponModelType } from "../types/database.types";
 import TaskResult from "../types/ai.types";
 import { _CartItemsModelType, _CartResponseType } from "../types/backwardCompatibility.types";
 import { cartMapper } from "../helper/backwardMapper";
+import prisma from "../config/prisma.config";
+import calculateDiscountedTotal from "../helper/discountMapper";
 
 @Route("cart")
 @Tags("Cart")
@@ -16,24 +18,23 @@ export class CartController extends Controller {
      */
     @Put('/:cartId')
     public async updateCart(
-        @Request() req: any, 
+        @Request() req: any,
         @Path('cartId') cartId: string,
-        @Body() body: { 
-            updatedItems: _CartItemsModelType[],
-            couponCode?: String
+        @Body() body: {
+            updatedItems: _CartItemsModelType[]
         }
     ): Promise<_CartResponseType> {
         try {
             const { updatedItems } = body;
-            
-            if(!cartId || !updatedItems){
+
+            if (!cartId || !updatedItems) {
                 throw new Error('Missing or invalid inputs!')
             }
 
             const updateCart = await updatedCart(req.user.id, cartId, updatedItems)
             const returnCart = cartMapper(cartId, updateCart)
             return returnCart
-        } catch (error: any){
+        } catch (error: any) {
             throw new Error(error.message)
         }
     }
@@ -45,28 +46,28 @@ export class CartController extends Controller {
      */
     @Post('/')
     public async createCart(
-        @Request() req: any, 
-        @Body() body: { 
-            data: TaskResult, 
-            combinedTotalSavedAmount: number, 
-            combinedSubTotal: number, 
-            total: number 
+        @Request() req: any,
+        @Body() body: {
+            data: TaskResult,
+            combinedTotalSavedAmount: number,
+            combinedSubTotal: number,
+            total: number
         }
     ): Promise<_CartResponseType> {
         try {
             const { data, combinedTotalSavedAmount, combinedSubTotal, total } = body;
 
-            if(!data || !combinedTotalSavedAmount || !combinedSubTotal || !total){
+            if (!data || !combinedTotalSavedAmount || !combinedSubTotal || !total) {
                 throw new Error('Missing or invalid inputs!')
             }
 
             const cart = await createCart(req.user.id, data, combinedTotalSavedAmount, combinedSubTotal, total)
-            if(!cart || !cart.id){
+            if (!cart || !cart.id) {
                 throw new Error('Cart creation unsuccessful! Try again!')
             }
             const returnCart = cartMapper(cart.id, cart)
             return returnCart
-        } catch (error: any){
+        } catch (error: any) {
             throw new Error(error.message)
         }
     }
@@ -79,7 +80,7 @@ export class CartController extends Controller {
      */
     @Post('/:cartId/items')
     public async createCartItems(
-        @Request() req: any, 
+        @Request() req: any,
         @Path('cartId') cartId: string,
         @Body() body: {
             combinedCartItems: CartItemsModelType[],
@@ -88,13 +89,109 @@ export class CartController extends Controller {
         try {
             const { combinedCartItems } = body;
 
-            if(!combinedCartItems || !cartId){
+            if (!combinedCartItems || !cartId) {
                 throw new Error('Missing or invalid inputs!')
             }
 
             const cart = await createCartItems(combinedCartItems, cartId.toString())
             return cart
-        } catch (error: any){
+        } catch (error: any) {
+            throw new Error(error.message)
+        }
+    }
+
+    /**
+     * Create multiple cartItems for a specific cart with cartId
+     * @param req Incoming HTTP request containing cartItems details.
+     * @param body contains a list of CartItems and cartId
+     * @returns A list of CartItems which are inserted
+     */
+    @Post('/coupon')
+    public async updateCartWithCouponCode(
+        @Body() body: {
+            cartId: string
+            couponCode: string
+        }
+    ): Promise<{ cart: _CartResponseType, coupon: { values: CouponModelType, applied: boolean } }> {
+        try {
+            if (!body.cartId || !body.couponCode) {
+                throw new Error('Missing or invalid inputs!')
+            }
+
+            // Calculate any discount if applicable
+            let discountedTotal = 0;
+
+            const existingCart = await prisma.cartModel.findUnique({
+                where: { id: body.cartId },
+            });
+
+            if (!existingCart) {
+                throw new Error('Invalid Cart ID.');
+            }
+
+            const coupon = await prisma.couponCodeModel.findUnique({
+                where: { couponCode: body.couponCode },
+            });
+
+            if (!coupon) {
+                throw new Error('Invalid coupon code.');
+            }
+
+            // Check if the coupon is expired
+            const currentDate = new Date();
+            if (coupon.expiryDate < currentDate) {
+                throw new Error('Coupon has expired.');
+            }
+
+            // Check the cart total against the coupon's minimum and maximum order value
+            if (existingCart.cartTotal < parseFloat(coupon.minimumOrderValue)) {
+                throw new Error(
+                    `Cart total is less than the minimum order value of ${coupon.minimumOrderValue}.`
+                );
+            }
+
+            if (coupon.maximumOrderValue && existingCart.cartTotal >= parseFloat(coupon.maximumOrderValue)) {
+                throw new Error(
+                    `Cart total exceeds the maximum order value of ${coupon.maximumOrderValue}.`
+                );
+            }
+
+            if (coupon.usageCount > coupon.usageLimit) {
+                throw new Error(
+                    `Coupon code has been used till its limit of ${coupon.usageLimit}.`
+                );
+            }
+
+            discountedTotal = calculateDiscountedTotal(existingCart.cartTotal, coupon.discountType, parseFloat(coupon.discountValue))
+
+            // Update the cart with the new subtotal and total
+            const updatedCart = await prisma.cartModel.update({
+                where: { id: body.cartId },
+                data: {
+                    couponId: coupon.id,
+                    cartTotal: discountedTotal,
+                },
+                include: { cartItems: true }
+            });
+
+            const updatedcoupon = await prisma.couponCodeModel.update({
+                where: { id: coupon.id },
+                data: {
+                    usageCount: { increment: 1 }
+                }
+            })
+
+            const returnCart = cartMapper(body.cartId, updatedCart)
+
+            return {
+                cart: returnCart,
+                coupon: {
+                    values: updatedcoupon, 
+                    applied: true
+                }, 
+            }
+
+        } catch (error: any) {
             throw new Error(error.message)
         }
     }
@@ -107,17 +204,17 @@ export class CartController extends Controller {
     @Get('/')
     public async getAllCarts(
         @Request() req: any
-    ): Promise<_CartResponseType[]>{
+    ): Promise<_CartResponseType[]> {
         try {
             const carts = await fetchAllCart(req.user.id)
             const mappedCarts = carts.map((cart: CartModelType) => {
-                if(!cart || !cart.id){
+                if (!cart || !cart.id) {
                     throw new Error('Carts fetch unsuccessful! Try again!')
                 }
                 return cartMapper(cart.id, cart)
             })
             return mappedCarts
-        } catch (error: any){
+        } catch (error: any) {
             throw new Error(error.message)
         }
     }
@@ -132,15 +229,15 @@ export class CartController extends Controller {
     public async getCartbyId(
         @Request() req: any,
         @Path('cartId') cartId: string,
-    ): Promise<_CartResponseType>{
+    ): Promise<_CartResponseType> {
         try {
             const cart = await fetchCartbyId(cartId)
-            if(!cart || !cart.id){
+            if (!cart || !cart.id) {
                 throw new Error('Cart fetch unsuccessful! Try again!')
             }
             const returnCart = cartMapper(cart.id, cart)
             return returnCart
-        } catch (error: any){
+        } catch (error: any) {
             throw new Error(error.message)
         }
     }
@@ -154,15 +251,15 @@ export class CartController extends Controller {
     public async deleteCartbyId(
         @Path('cartId') cartId: string,
         @Request() req: any
-    ): Promise<_CartResponseType>{
+    ): Promise<_CartResponseType> {
         try {
             const cart = await deleteCartbyId(cartId, req.user.Id)
-            if(!cart || !cart.id){
+            if (!cart || !cart.id) {
                 throw new Error('Cart delete unsuccessful! Try again!')
             }
             const returnCart = cartMapper(cart.id, cart)
             return returnCart
-        } catch (error: any){
+        } catch (error: any) {
             throw new Error(error.message)
         }
     }
